--- a/web-data-viz/public/assets/styles/monitoramentoGestaoInfra.css
+++ b/web-data-viz/public/assets/styles/monitoramentoGestaoInfra.css
@@ -10,8 +10,13 @@
   padding: 0;
   list-style: none;
   font-family: "Montserrat";
+
+  body{
+   background-color: #F5F1F1;
+}
   
 }
+
 
 /* ========== BARRA LATERAL ========== */
 .menu {
@@ -373,35 +378,25 @@
         
         
         .cartao-titulo{
-          margin-top: 10%;
-            font-size: 18px;
-            font-weight: 500;
-            margin-bottom: 3px;
-            color: #aa1703;
-            padding-bottom: 3px;
-            border-bottom: 1px solid #eee;
-        }
-
-        .cartao-titulo2{
-          margin-top: 1%;
-           font-size: 18px;
-            font-weight: 500;
-            margin-bottom: 3px;
-            color: #aa1703;
-            padding-bottom: 3px;
-            border-bottom: 1px solid #eee;
-
-        }
-
-        h3.cartao-titulo2{
-          margin-top: 1%;
+        margin-top: 1%;
            font-size: 18px;
             font-weight: 700;
             margin-bottom: 3px;
             color: #000000;
       
             padding-bottom: 3px;
-            border-bottom: 1px solid #eee;
+           
+        }
+
+        
+        .cartao-titulo2{
+          margin-top: 1%;
+           font-size: 18px;
+            font-weight: 700;
+            color: #000000;
+      
+            padding-bottom: 3px;
+            
 
         }
         
@@ -426,38 +421,35 @@
         
         
         
-        .alerta-contagem{
-            background-color: #aa1201;
-            color: white;
-            padding: 5px 10px;
-            border-radius: 5px;
-            font-size: 14px;
-            display: inline-block;
-            min-width: 35px;
-            text-align: center;
-            font-weight: 500;
-            box-shadow: 0 2px 5px rgba(231, 76, 60, 0.3);
-        }
-
+       
         .caixasumario {
-             margin-top: 20px;
-            padding: 25px;
-            background-color: #ffffff;
-            border-bottom: 5px solid #04708d;
-            border-radius: 12px;
-            box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .caixasumario2 {
-          display: flex;
+         display: flex;
           flex-direction: column;
             margin-top: 20px;
+            margin-bottom: 20px;
             align-items: center;
             padding: 2%;
             background-color: #ffffff;
             border-bottom: 5px solid #04708d;
             border-radius: 12px;
             box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+            min-height: 100px; 
+            justify-content: space-between;
+        }
+
+        .caixasumario2 {
+          display: flex;
+          flex-direction: column;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            align-items: center;
+            padding: 2%;
+            background-color: #ffffff;
+            border-bottom: 5px solid #04708d;
+            border-radius: 12px;
+            box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+            min-height: 100px; 
+            justify-content: space-between;
         }
 
         
@@ -476,7 +468,7 @@
             font-size: 32px;
             font-weight: 700;
             color: #ac1100;
-          
+            margin-top: -12%;
             text-shadow: 0 1px 2px rgba(0,0,0,0.1);
         }
 
@@ -488,31 +480,11 @@
             font-weight: 400;
         }
 
-        .chart-container {
-            margin-top: 25px;
-            height: 300px;
-            position: relative;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-            background-color: white;
-            padding: 15px;
-        }
+    
 
-        .heat-indicator {
-          display: flex;
-          flex-direction:column;
-          
-          align-items: center;
-        }
+    
 
-        .heat-bar {
-          width: 20px;
-          height: 100px;
-          background: linear-gradient(to bottom, #0b335c, red);
-          
-          
-}
+        
 
 .label-top,
 .label-bottom {
