--- a/web-data-viz/public/assets/styles/dashAdmin.css
+++ b/web-data-viz/public/assets/styles/dashAdmin.css
@@ -217,7 +217,7 @@ body {
 
 #dataInfo {
   display: flex;
-  font-size: 27px;
+  font-size: 22px;
   font-weight: 550;
 }
 
@@ -562,7 +562,7 @@ body {
   padding: 10px;
   border-radius: 10px;
   height: fit-content;
-  box-shadow: 5px 2px 10px rgba(161, 160, 160);
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .containerKPI {
@@ -582,7 +582,7 @@ body {
   padding: 1vw;
   width: 22vw;
   height: 13.5vh;
-  font-size: 17px;
+  font-size: 13px;
   color: black;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
   font-weight: bold;
@@ -597,7 +597,7 @@ body {
 }
 
 .kpiUso h2 {
-  font-size: 18px;
+  font-size: 15px;
 }
 .kpiUso h3 {
   font-size: 15px;
@@ -607,7 +607,7 @@ body {
 }
 
 .dadoKpi {
-  font-size: 35px;
+  font-size: 25px;
   color: #04708d;
 }
 
