--- a/web-data-viz/public/assets/styles/dashMonitoramento-vitor.css
+++ b/web-data-viz/public/assets/styles/dashMonitoramento-vitor.css
@@ -435,13 +435,20 @@ tbody tr:nth-child(even) {
   /* background: linear-gradient(270deg, #012027, #04708d); */
   color: #000;
   padding: 1vw;
-  border: 1px solid #04708d;
   border-bottom: 5px solid #04708d;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
   font-weight: bold;
+  min-height: 9vw;
 }
 
+.tempo_atividade p{
+  font-size: 500px;
+}
 
+#qtdTotalServidores{
+  color: #04708d;
+
+}
 
 #qtdServidoresCritico {
   color: #04708d;
@@ -451,9 +458,14 @@ tbody tr:nth-child(even) {
   color: #04708d;
 }
 
+.tempo_atividade h3 {
+  margin-top: 1%;
+  font-size: 2vw;
+}
+
 .tempo_atividade p {
   margin-top: 1%;
-  font-size: 1.2vw;
+  font-size: 3vw;
 }
 
 .mainContainerTabela {
@@ -462,6 +474,18 @@ tbody tr:nth-child(even) {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.mainContainerTabela h2{
+  font-size: 2.5vw;
+}
+
+table th{
+  font-size: 1.5vw;
+}
+
+table td{
+  font-size: 1.5vw;
 }
 
 table th,
@@ -526,9 +550,8 @@ table i:hover {
 }
 
 .atencao {
-  border: 1px solid yellow;
-  background-color: #ead308;
-  color: #000;
+  background-color: #ffff6d;
+  /* color: #000; */
 }
 
 @media screen and (max-width: 700px) {
