--- a/web-data-viz/public/assets/styles/dashMonitoramento-especifica.css
+++ b/web-data-viz/public/assets/styles/dashMonitoramento-especifica.css
@@ -313,13 +313,13 @@ textarea {
 }
 
 .titleContainer h1 {
-  font-size: clamp(18px, 2.5vw, 24px);
+  /* font-size: clamp(18px, 2.5vw, 24px); */
   color: #04708d;
   margin-bottom: 3px;
 }
 
 .titleContainer p {
-  font-size: clamp(11px, 1.2vw, 14px);
+  font-size: 1vw;
   color: #666;
   margin-bottom: 3px;
 }
@@ -360,7 +360,7 @@ td {
   padding: 4px 8px;
   text-align: left;
   border-bottom: 1px solid #ddd;
-  font-size: clamp(11px, 1vw, 14px);
+  /* font-size: clamp(11px, 1vw, 14px); */
 }
 
 tbody tr:hover {
@@ -607,7 +607,6 @@ table i:hover {
   font-weight: 1000;
 }
 
-
 #utilizacaoInfoDisco {
   margin-top: 5%;
   color: #04708d;
@@ -638,7 +637,6 @@ table i:hover {
   font-size: 10px;
 }
 
-
 .redeChart {
   display: flex;
   flex-direction: column;
@@ -661,7 +659,7 @@ table i:hover {
   align-items: center;
   justify-content: flex-start;
   gap: 30%;
-  background-color: #EFEFEF;
+  background-color: #efefef;
   border: 2px solid #8f8f8f;
   min-height: 20%;
   max-height: 80%;
@@ -672,7 +670,7 @@ table i:hover {
 .containerFiltroCpu:hover {
   cursor: pointer;
   border: 1px solid black;
-  background-color: #036B88;
+  background-color: #036b88;
   color: #fff;
 }
 
@@ -693,7 +691,6 @@ table i:hover {
 .containerFiltro p {
   width: 25%;
   margin: 0;
-
 }
 
 .containerTitulo i {
@@ -728,7 +725,7 @@ table i:hover {
 .trianguloUp {
   width: 20px;
   height: 20px;
-  background-color: #03708D;
+  background-color: #03708d;
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
   margin-top: 5px;
   margin-right: 20px;
@@ -740,7 +737,7 @@ table i:hover {
   margin-right: 20px;
   width: 20px;
   height: 20px;
-  background-color: #03708D;
+  background-color: #03708d;
 }
 
 .uploadContainer {
@@ -759,7 +756,6 @@ table i:hover {
 .containerTitulo2 h5 {
   font-size: 4vw;
 }
-
 
 /* Estilos para botões responsivos */
 button {
