--- a/web-data-viz/public/assets/styles/dashAdmin.css
+++ b/web-data-viz/public/assets/styles/dashAdmin.css
@@ -62,6 +62,11 @@ body {
 
 .tituloContainerFabricas {
   font-size: 20px;
+  width: 100%;
+}
+
+.nomeGrafico {
+  font-size: 20px;
 }
 
 .cards-container {
@@ -260,6 +265,7 @@ body {
   right: 0;
   bottom: 0;
   transition: 0.3s;
+  z-index: 1;
 }
 
 .bobAlerta:hover {
@@ -325,10 +331,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.nomeGrafico {
-  font-size: larger;
 }
 
 /* NavBar */
