--- a/web-data-viz/public/assets/styles/dashAdmin.css
+++ b/web-data-viz/public/assets/styles/dashAdmin.css
@@ -79,7 +79,7 @@ body {
 }
 
 .card {
-  height: 25vh;
+  height: 28%;
   width: 28%;
   padding: 18px;
   border-radius: 10px;
@@ -124,13 +124,13 @@ body {
 }
 
 .card-titulo {
-  font-size: 18px;
+  font-size: 17px;
   font-weight: bold;
   margin-bottom: 15px;
 }
 
 .card-info {
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .card-info div {
@@ -202,7 +202,7 @@ body {
   color: #991b1b;
   padding: 4px 8px;
   border-radius: 4px;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 .status-atencao {
@@ -210,7 +210,7 @@ body {
   color: #92400e;
   padding: 4px 8px;
   border-radius: 4px;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 .status-ok {
@@ -218,7 +218,7 @@ body {
   color: #166534;
   padding: 4px 8px;
   border-radius: 4px;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 .cabecalhoDash {
